# ChangeLog for sys-process/lsof
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/lsof/ChangeLog,v 1.42 2008/03/28 07:43:08 jer Exp $

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> lsof-4.78-r1.ebuild:
  Stable for HPPA too.

  01 Dec 2007; Markus Rothe <corsair@gentoo.org> lsof-4.78-r1.ebuild:
  Stable on ppc64

  20 Nov 2007; Joshua Kinard <kumba@gentoo.org> lsof-4.78.ebuild:
  Stable on mips.

  01 Nov 2007; <solar@gentoo.org> lsof-4.78-r1.ebuild:
  - stable on ia64/amd64/x86

  19 Jul 2007; Joshua Kinard <kumba@gentoo.org> ChangeLog:
  Stable on mips, per #185155.

  13 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> lsof-4.78.ebuild:
  Stable on sparc wrt #185155

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> lsof-4.78.ebuild:
  alpha/ia64/x86 stable wrt #185155

  13 Jul 2007; Joseph Jezak <josejx@gentoo.org> lsof-4.78.ebuild:
  Marked ppc and ppc64 stable for bug #185155.

  13 Jul 2007; Mike Doty <kingtaco@gentoo.org> lsof-4.78.ebuild:
  amd64 stable bug 185155

  13 Jul 2007; Jeroen Roovers <jer@gentoo.org> lsof-4.78.ebuild:
  Stable for HPPA (bug #185155).

*lsof-4.78-r1 (13 Jul 2007)

  13 Jul 2007; Mike Frysinger <vapier@gentoo.org> +lsof-4.78-r1.ebuild:
  Move lsof to /usr/bin #185145 by Hanno Boeck.

  18 May 2007; Roy Marples <uberlord@gentoo.org>
  +files/lsof-4.78-answer-config.patch, +files/lsof-4.78-freebsd.patch,
  lsof-4.78.ebuild:
  Add patch to compile on FreeBSD and keyword ~x86-fbsd, #132085.

*lsof-4.78 (12 May 2007)

  12 May 2007; Mike Frysinger <vapier@gentoo.org> +lsof-4.78.ebuild:
  Version bump #177986 by Andrej Kacian.

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> lsof-4.77.ebuild:
  Marked stable on mips.

  04 Sep 2006; Saleem Abdulrasool <compnerd@gentoo.org> lsof-4.77.ebuild:
  stable on x86 (bug #144925)

  29 Aug 2006; Bryan Østergaard <kloeri@gentoo.org> lsof-4.77.ebuild:
  Stable on alpha.
