@@ -2,6 +2,7 @@ AUX lsof-4.78-answer-config.patch 2217 RMD160 a8ecfaf246398a016f2ce942ba8142f255
 AUX lsof-4.78-config-solaris.patch 266 RMD160 73ee79d51a563b19289175a5e5088abb0f8f9073 SHA1 309e8a3ca7c1f82fa0d02de5006be8faa22790b1 SHA256 bd5a576ffb975fda9aef1fc759d002588177cad93cc60a7abede50e429297d0a
 AUX lsof-4.78-freebsd.patch 455 RMD160 8595b877ed722cffda486232cbbbbe6cfc61b4f7 SHA1 a5ce7efd2fd074fdd97114e1f4fc0822b83d0834 SHA256 6a3c841f11fbabb17cf8ff7c6c7b19c04cf169dc01002ee243370003fd81367b
 DIST lsof_4.78.tar.bz2 756729 RMD160 50d71e500f1109cda717b73ce209c0e100a6dbe9 SHA1 0379fc9f38a931ce19e8386e662314d96fc2a099 SHA256 898db51a4016efca7d408163578443238373773357949e1b4978e26807a1fb2b
-EBUILD lsof-4.78-r1.ebuild 1716 RMD160 6ceef4fb9fad2f0c27468d12cba438b18984e9c2 SHA1 8074e7ce5c3b7e0395a67002e599c6ccc4b2d1da SHA256 a67c20f89b05e62495205c2a430b9302ffebfd80794f48fadcdfc9b2dd0ccd90
-MISC ChangeLog 8637 RMD160 f32ea4b03d6650caad44bb7c8bb9333e156e9a83 SHA1 468bd491250ad9adbcede18d6e8fec7546e91934 SHA256 5bc454850f6859ca8c0b19332814e30f79a608f8007e8face194a3161639d004
+EBUILD lsof-4.78-r1.ebuild 1692 RMD160 073a4ce31642569efd607bfede07c8cd156c7164 SHA1 e526c4da4ec249efc49f82d730ab0843a2c69e26 SHA256 e0ea85fada65f48e7ee4975c8eac5e2d6b7d32c6380d64d6ac47a4754471246f
+EBUILD lsof-4.78-r2.ebuild 1927 RMD160 3ea65c1bd84b9adfd08c9c427dd68b71cd311d8f SHA1 c07d47c5a6eeeb2383d548d347dd5cbdbedce9ea SHA256 8813e2df32af6d1075020e74fddfe6d0788dd4f4205f7cd6f65dcc87b487cd6b
+MISC ChangeLog 8856 RMD160 b6d7fb99d5ae82036c83acbaa345a2a7a5ba63de SHA1 cdcd748be61b34673b2b26ec96e5882fac673441 SHA256 fe16b31d22c80dff199da9f9b0f6fb487da43a79aadb20e552be1577cfc79ffb
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
