@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/lsof/lsof-4.78-r1.ebuild,v 1.6 2008/03/28 07:43:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/lsof/lsof-4.78-r2.ebuild,v 1.1 2008/05/14 15:05:26 cardoe Exp $
 
 EAPI="prefix"
 
@@ -16,9 +16,9 @@ SRC_URI="ftp://lsof.itap.purdue.edu/pub/tools/unix/lsof/${MY_P}.tar.bz2
 LICENSE="lsof"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris"
-IUSE="static"
+IUSE="static selinux"
 
-DEPEND=""
+DEPEND="selinux? ( sys-libs/libselinux )"
 
 S=${WORKDIR}/${MY_P}/${MY_P}_src
 
@@ -34,6 +34,13 @@ src_unpack() {
 	epatch "${FILESDIR}"/${P}-answer-config.patch
 	epatch "${FILESDIR}"/${P}-freebsd.patch
 	epatch "${FILESDIR}"/${P}-config-solaris.patch
+	#Fix automagic dependency on libselinux. Bug 188272.
+	if ! use selinux; then
+		sed -i \
+			-e 's/ -DHASSELINUX//' \
+			-e 's/ -lselinux//' \
+			Configure || die "Sed failed. 404. WTF..."
+	fi
 }
 
 src_compile() {
