@@ -1,6 +1,12 @@
 # ChangeLog for sys-process/lsof
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/lsof/ChangeLog,v 1.42 2008/03/28 07:43:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/lsof/ChangeLog,v 1.43 2008/05/14 15:05:26 cardoe Exp $
+
+*lsof-4.78-r2 (14 May 2008)
+
+  14 May 2008; Doug Goldstein <cardoe@gentoo.org> +lsof-4.78-r2.ebuild:
+  fix automagical depend on selinux. bug #188272. patch provided by Peter
+  Alfredsen <peter.alfredsen@gmail.com>
 
   28 Mar 2008; Jeroen Roovers <jer@gentoo.org> lsof-4.78-r1.ebuild:
   Stable for HPPA too.
